<resources>
    <string name="app_name">Traveling</string>
    <string name="title_onboarding_one_text">Tu App de Viajes</string>
    <string name="bodytext_onboarding_one_text">Hola, estamos buscando a millones de usuarios con inquietudes y ganas de viajar. Si eres tu? No lo dudes accede a nuestra app y descubriras miles de destinos y facilidades para alquilar coches, ver el tiempo…</string>
    <string name="buttonOnBoarding_next_text">Next</string>
    <string name="title_home_text">Upcoming meetups</string>
    <string name="textview_body_home_los_angeles_text">USA, Los Angeles - 2 Weeks</string>
    <string name="textview_title_home_los_angeles_text">City of Los Angeles</string>
    <string name="title_Login_text">Login</string>
    <string name="nameLogin_hint">Login</string>
    <string name="passwordLogin_hint">Password\n</string>
    <string name="buttonLogin_text"><![CDATA[Login ➜]]></string>
    <string name="forgotTextLogin_text">Forgot password</string>
    <string name="forgotButtonLogin_text">Get new</string>
    <string name="registerTextLogin_text">Do you have an account?</string>
    <string name="registerButtonLogin_text">Create new</string>
    <string name="button_login_forgot_onclick">The button forgot will be implemented soon</string>
    <string name="button_login_register_onclick">The button register will be implemented soon</string>
    <string name="name_register_hint">¿Como te llama?</string>
    <string name="last_name_register_hint">¿Y tu apellido?</string>
    <string name="confirm_register_text">Me apunto</string>
    <string name="ages_range_register_hint">¿Cuantos años tienes?</string>
    <string name="privacy_text_register_text">Política de Privacidad\n</string>
    <string name="privacy_button_register_text">Ver Condiciones</string>
    <string name="error_name_register">Ups, no creo que sea correcto, revísalo</string>
    <string name="error_last_name_register">Ups, no creo que sea correcto, revísalo</string>
    <string name="error_agesRange_lower_years">Esta app no es para ti</string>
    <string name="error_permission_camera">Necesita darle permiso de camara</string>
    <string name="fragment_register_name">Registro</string>
    <string name="error_login_incorrect_login_or_password">El login o la contraseña es incorrecto verifique sus datos</string>
    <string name="activity_home_name">Home</string>
    <string name="menu_castle_title">Eurodisney</string>
    <string name="menu_car_title">Alquila un coche</string>
    <string name="user_name_description">Nombre</string>
    <string name="user_password_description">Contraseña</string>
    <string name="confirm_message_login">Entendido</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="activity_login_toolbar_tittle">Activity Login</string>
    <string name="button_photo_register_content_description">Boton para cambiar la imagen</string>
    <string name="ages_range_list_register_content_description">Lista de rango de años para el usuario</string>
    <string name="empty_text"> </string>
    <string name="title_onboarding_two_text">Find Your Match!</string>
    <string name="bodytext_onboarding_two_text">We\'ve helped millions across the nation find their perfect match… and you\'re next!</string>
    <string name="button_onboarding_skip_text">Skip</string>
    <string name="title_onboarding_three_text">Find the Perfect Roommate</string>
    <string name="bodytext_onboarding_three_text">"We've helped millions across the nation find their perfect match.. and you're next! "</string>
    <string name="button_onboarding_long_in_text">Long in v</string>
    <string name="home_car_price_text">$%1.0f/day</string>
    <string name="home_face_position_text">3</string>
    <string name="home_mountain_position_text">2</string>
    <string name="home_car_name_text">Nombre</string>
    <string name="error_permission_location">Necesita el permiso de ubicación</string>
    <string name="universal_message_ok">OK</string>
    <string name="notification_login_success_title">Bienvenido %1$s</string>
    <string name="notification_login_success_text">Nos alegra verte en este paraíso.</string>
    <string name="channel_name">notification_channel_name</string>
    <string name="channel_description">notification_channel_description</string>
    <string name="alert_dialogo_permission_notification_setting_title">Permiso de Notificación</string>
    <string name="alert_dialogo_permission_notification_setting_message">El permiso de notificacion esta desabilitado, habilitalo para recibir notificacion en configuraciones</string>
    <string name="button_positive_text">OK</string>
    <string name="button_negative_text">Cancelar</string>
    <string name="alert_dialogo_permission_notification_rationale_title">El permiso de notificacion es necesario para recibir notificacion</string>
    <string name="item_hotel_name_empty">Sin Nombre</string>
    <string name="item_hotel_address">Ubicado: %1$s,%2$s %3$s</string>
    <string name="item_hotel_star_rating">Estrellas: %1$d</string>
    <string name="error_no_found_hotels">No se ha podido encontrar los hoteles</string>
    <string name="hotel_anotation_name">Nombre Hotel</string>
</resources>