<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/celeste"
    app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
    tools:context=".feature.login.fragments.RegisterFragment">

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/button_photo_register"
        android:layout_width="@dimen/perfil_photo_dimen"
        android:layout_height="@dimen/perfil_photo_dimen"
        android:contentDescription="@string/button_photo_register_content_description"
        android:background="@android:color/transparent"
        android:scaleType="centerCrop"
        android:src="@drawable/imagen_registro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/camera_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_camera"
        app:layout_constraintBottom_toBottomOf="@+id/button_photo_register"
        app:layout_constraintEnd_toEndOf="@+id/button_photo_register"
        app:layout_constraintStart_toStartOf="@+id/button_photo_register" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_register"
        style="?attr/travelingTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/light_cyan_shape"
        android:hint="@string/name_register_hint"
        app:endIconDrawable="@drawable/ic_eye"
        app:endIconMode="custom"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_photo_register"
        app:startIconDrawable="@drawable/ic_face">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_text_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/last_name_register"
        style="?attr/travelingTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/light_cyan_shape"
        android:hint="@string/last_name_register_hint"
        app:endIconDrawable="@drawable/ic_eye"
        app:endIconMode="custom"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_register"
        app:startIconDrawable="@drawable/ic_face">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/last_name_text_register"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@android:color/transparent"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ages_range_register"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marginshort"
        android:background="@drawable/light_cyan_shape"
        android:hint="@string/ages_range_register_hint"
        android:textColorHint="@color/black"
        app:endIconDrawable="@drawable/ic_arrow_down"
        app:endIconMode="dropdown_menu"
        app:endIconTint="@color/black"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/last_name_register">

        <AutoCompleteTextView
            android:id="@+id/ages_range_list_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:text="@string/empty_text"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_confirm_register"
        android:layout_width="250dp"
        android:layout_height="@dimen/button_medium"
        android:layout_marginBottom="@dimen/marginlarge"
        android:backgroundTint="@color/yellow"
        android:enabled="false"
        android:fontFamily="@font/andika"
        android:text="@string/confirm_register_text"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/linear_layout_privacy_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linear_layout_privacy_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/marginshort"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/privacy_text_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/privacy_text_register_text" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_privacy_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@android:color/transparent"
            android:text="@string/privacy_button_register_text" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>