<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".feature.onboarding.fragments.OnboardingTwoFragment"
    android:background="@color/flesh_tone">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linear_onboarding_two"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/long_margin"
        android:gravity="top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/linear_onboarding_button_two"
        >


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/title_onboarding_two"
            style="?attr/travelingTxtH4"
            android:layout_width="wrap_content"
            android:layout_marginHorizontal="@dimen/short_margin"
            android:layout_height="wrap_content"
            android:text="@string/title_onboarding_two_text" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/bodytext_onboarding_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/short_margin"
            style="?attr/travelingTxtBody1"
            android:text="@string/bodytext_onboarding_two_text" />

        <ImageView
            android:id="@+id/imagenview_onboarding_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitCenter"
            android:src="@drawable/nomads_city_tour" />
    </androidx.appcompat.widget.LinearLayoutCompat>
<androidx.appcompat.widget.LinearLayoutCompat
    android:id="@+id/linear_onboarding_button_two"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="horizontal"
    android:layout_marginBottom="@dimen/long_margin"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintBottom_toBottomOf="parent">
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_onboarding_two_skip"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:background="@drawable/stroke_transparent_square_shape"
        android:textColor="@color/black"
        android:textAllCaps="false"
        android:visibility="visible"
        android:text="@string/button_onboarding_skip_text"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_onboarding_two_next"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:textAllCaps="false"
        android:background="@drawable/simple_square_shape"
        android:textColor="@color/white"
        android:visibility="visible"
        android:text="@string/buttonOnBoarding_next_text"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>