<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".feature.onboarding.fragments.OnboardingTwoFragment"
    android:background="@color/blue_light">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linear_onboarding_three"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="top"
        android:layout_marginTop="@dimen/long_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/button_onboarding_two_long_in"
        >


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/title_onboarding_three"
            style="?attr/travelingTxtH4"
            android:layout_marginHorizontal="@dimen/short_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_onboarding_three_text" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/bodytext_onboarding_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/short_margin"
            style="?attr/travelingTxtBody1"
            android:text="@string/bodytext_onboarding_three_text" />

        <ImageView
            android:id="@+id/imagenview_onboarding_three"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitCenter"
            android:src="@drawable/nomad_shocked" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_onboarding_two_long_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/stroke_white_square_shape"
        android:text="@string/button_onboarding_long_in_text"
        android:textColor="@color/black"
        android:textAllCaps="false"
        android:visibility="visible"
        android:layout_marginHorizontal="@dimen/short_margin"
        android:layout_marginBottom="@dimen/long_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>