<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RegisterActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/register_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_back"
            app:theme="@style/ToolBarStyleTravelingWorld"
            app:title="@string/activity_register_name" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        android:background="@color/celeste">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/button_photo_register"
            android:layout_width="@dimen/perfil_photo_dimen"
            android:layout_height="@dimen/perfil_photo_dimen"
            android:scaleType="centerCrop"
            android:src="@drawable/imagen_registro"
            android:background="@android:color/transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/camera_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_camera"
            app:layout_constraintEnd_toEndOf="@+id/button_photo_register"
            app:layout_constraintStart_toStartOf="@+id/button_photo_register"
            app:layout_constraintBottom_toBottomOf="@+id/button_photo_register"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_register_hint"
            app:startIconDrawable="@drawable/ic_face"
            app:endIconMode="custom"
            app:endIconDrawable="@drawable/ic_eye"
            android:background="@drawable/light_cyan_shape"
            app:errorEnabled="true"
            style="?attr/travelingTextInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_photo_register">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_text_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:backgroundTint="@android:color/transparent" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/last_name_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name_register_hint"
            style="?attr/travelingTextInputLayout"
            app:startIconDrawable="@drawable/ic_face"
            app:endIconMode="custom"
            app:errorEnabled="true"
            app:endIconDrawable="@drawable/ic_eye"
            android:background="@drawable/light_cyan_shape"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_register">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/last_name_text_register"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:backgroundTint="@android:color/transparent" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ages_range_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ages_range_register_hint"
            android:layout_margin="@dimen/marginshort"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            app:endIconMode="dropdown_menu"
            app:endIconTint="@color/black"
            android:textColorHint="@color/black"
            app:errorEnabled="true"
            app:endIconDrawable="@drawable/ic_arrow_down"
            android:background="@drawable/light_cyan_shape"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/last_name_register">
            <AutoCompleteTextView
                android:id="@+id/ages_range_list_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:backgroundTint="@android:color/transparent" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_confirm_register"
            android:layout_width="250dp"
            android:layout_height="@dimen/button_medium"
            android:backgroundTint="@color/yellow"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:fontFamily="@font/andika"
            android:enabled="false"
            android:layout_marginBottom="@dimen/marginlarge"
            android:text="@string/confirm_register_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/linear_layout_privacy_register"/>
        <LinearLayout
            android:id="@+id/linear_layout_privacy_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="@dimen/marginshort">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/privacy_text_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/privacy_text_register_text"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_privacy_register"
                android:layout_width="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_height="wrap_content"
                android:text="@string/privacy_button_register_text"
                android:background="@android:color/transparent"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>